--- a/Cube/Cube/Cube.csproj
+++ b/Cube/Cube/Cube.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Axes.cs" />
     <Compile Include="ICube.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
