--- a/Cube/Cube/Cube.csproj
+++ b/Cube/Cube/Cube.csproj
@@ -43,7 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Axes.cs" />
+    <Compile Include="Geometry.cs" />
+    <Compile Include="ISlice.cs" />
     <Compile Include="ICube.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
