Added colour enum

--- a/Cube/Cube/Cube.csproj
+++ b/Cube/Cube/Cube.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Colours.cs" />
     <Compile Include="Geometry.cs" />
     <Compile Include="ISlice.cs" />
     <Compile Include="ICube.cs" />
