Added empty implementation of IBlock and a test file

--- a/Cube/Cube/Cube.csproj
+++ b/Cube/Cube/Cube.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Block.cs" />
     <Compile Include="Colours.cs" />
     <Compile Include="Geometry.cs" />
     <Compile Include="IBlock.cs" />
