--- a/Cube/CubeTest/CubeTest.csproj
+++ b/Cube/CubeTest/CubeTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Block.cs" />
     <Compile Include="MinimalSlice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Slice.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Cube\Cube.csproj">
