--- a/Cube/Cube/Cube.csproj
+++ b/Cube/Cube/Cube.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Block.cs" />
     <Compile Include="Colours.cs" />
+    <Compile Include="Cube.cs" />
     <Compile Include="Geometry.cs" />
     <Compile Include="IBlock.cs" />
     <Compile Include="ISlice.cs" />
