--- a/Cube/Cube/Cube.csproj
+++ b/Cube/Cube/Cube.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ICube.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rotation.cs" />
     <Compile Include="Slice.cs" />
     <Compile Include="SliceIdentifier.cs" />
   </ItemGroup>
